www/css/frm.css
body {
  #min-height: 2000px;
  padding-top: 60px;
  min-height:100%;
}

.large-glyphicon {
  font-size: 28px;  
}


.examday-tabs {
  margin: 10px;
}

.add-reminder-area {
}

.exam-question-answer {
  margin: 10px;
}

.myaccount-continue {
  float: right;
  margin-right: 10px;
  margin-top: 10px;
}

.exam-setting-title {
  margin: 10px;
  padding: 10px;
  text-align: center;
}

.exam-setting {
  margin: 10px;
  padding: 10px;
  text-align: center;
  background-color: #e7e7e7; 
  min-height: 75px;
}

.exam-setting-button {
  float: right;
  margin-right: 10px;
}

.exam-setting-on {
  background-color: lightblue;
}

.nav-footer {
  text-align:center;
  position: fixed;
  top: 0px;
  z-index: 1030;
  height: 75px;
  width: 100%;
  background-color:#181717;
  opacity:0.6;
  filter:alpha(opacity=60); /* For IE8 and earlier */

}

.nav-footer-control {
  position: fixed;
  top: 0px;
  right: 0px;
  z-index: 1030;
  text-align: right;
  color: white;
}

.nav-footer-control-off-icon {
  color: white;
  font-size: 18px;
  margin-left: 10px;
  margin-top: 30px;
}

.nav-footer-control-off {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 1030;
  height: 100px;
  width: 20px;
  background-color:#181717;
  opacity:0.6;
  filter:alpha(opacity=60); /* For IE8 and earlier */
}

.nav-footer-control-off-text {
  margin-top: 40px;
  margin-left: 10px;
  font-size: 18px;
  color: white;
}

.nav-footer-control-off-bar {
  width: 4px;
  height: 2px;
  background-color:white;
  margin-left: 6px;
  margin-top: 5px;
  border-radius:2px;
}

.nav-footer-item {
  border:1px solid black;
  float:left;
  width:25%;
  height: 100%;
  font-size: 18px;
  color: white;
}

.nav-footer-item-text {
}

.nav-footer-item-icon {
  font-size: 28px;
  margin-top: 5px;  
}

.test-results-bottom-nav-area {
  margin: 10px;
}

.button-on {
  background-color: lightblue;
}

.insperation-area {
  padding: 5px;
}

.readings-list-area {

}

.readings-filter {
}

.readings-filter-pills-text {
  margin-top: 15px;
  font-size: smaller;
}

.user-info-area {
  padding: 5px;
}

.schedulebar {
  float: left;
}

.schedulebar-area {
    height: 60px;
    margin: 0 auto;
    overflow: hidden;
}

.schedulebar-block {
  #border: 1px solid;
  float: left;
}

.schedulebar-item {
  	width: 45px;
    height: 45px;
    float: left;    
    margin-bottom: 15px;
    text-align: center;
}

.schedule-item-area {
  	background-color: #00000000;
    margin-top: 10px;
    height: 30px;
    padding: 5px;
    border: 1px solid;
    margin-right: 5px;
    margin-left: 5px;    
}

.schedulebar-item-done {
  background-color: #dddddd;
}

.schedulebar-item-inProgress {
    background-color: #dddddd;
}

.schedulebar-item-selected {
	border: 2px solid;
	border-color: green;
}

.schedule-item-area:hover{
   background-color:gold
}


.schedulebar-item-active {
    background-color: green;
}

.schedulebar-item-text {
}

.schedulebar-path-area {
    margin-bottom: 5px;
}

.schedulebar-scroll-area {
  margin-top: 15px; 
  width: 30px;
  height: 50px;
  text-align: center;  
}

.schedulebar-scroll-left {
  float: left; 
}

.schedulebar-scroll-right {
  float: right; 
}


.photo-area {
  padding-right: 10px;
  float: left;
}

.photo {
  margin-bottom: 5px;
}

.video-area {
}

.jplayer-advance-controls {
}

.jplayer-area {
}

.videoplayer {
  display: none;
  width:300px; 
}

.videoimage-controls-area {
  display: block;
  margin: 0 auto;
  width: 300px;  
  height: 200px;
}


.videoimage {
  position: relative;
}

.videoplaybutton {
  position: relative;
  top: -100px;
}

.videoplaybutton-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.login-area { 
  width: 320px;
}

.login-area div {
  padding: 5px;
}

.login-buttons-username {
  padding-left: 20px;
}

.login-buttons {
    width: 220px;
    margin: 0 auto;
}

.login-header-area {
  text-align: center;
  padding-bottom: 20px;
}

.login-footer-area {
  text-align: center;
  padding-top: 20px;
}

.hoz-center {
  margin: 0 auto;
}

.text-center {
  text-align: center;
}

.reading-list-area {

}

.reading-item-left {
  float: left;
}

.reading-item-right {
  float: right;
}

.readings-list-item {
  min-height: 50px;
}

.reading-list-button {
  margin-top: 1px;
}

.examname {
}
.examday-map-area {
  height: 500px;
}
.examday-info-area {
  margin: 10px;
}

.addBorder {
	border: 1px solid;
	border-color: #dddddd;		
}

.reading-done {
	background-color: #e7e7e7;
}

.msgread {
	background-color: pink;
	display:;
}

.msg-urgent {
	float: left;
	height: 50px;
	width: 20px;
}

.msg-header {
	height: 50px;
}

.msg-body-closed {
	display:none;
}

.msg-body-open {
	display:inline;
}


.flagtestarea {
	#padding: 5px;
	height: 90px;
	margin-top: 10px;
}

.flagarea {
    background-color: lightgray;
	float: left;
	width: 47%;
	#margin: 5px;
}

.testarea {
    background-color: lightgray;
	float: right;
	width: 47%;
	#margin: 5px;
}

.messagearea {
  #background-color: lightgray;
	margin-top: 10px;
	height: 250px;
}


.daysarea {
  background-color: lightgray;
	height: 100px;
}

.daysarea:active, .flagarea:active, .testarea:active, .btn:active, .schedulebar-scroll-left:active, .schedulebar-scroll-right:active {
  background-color: lightblue;
}  

.daysleft {
	  float: left;
    padding: 10px;
}

.daysright {
  margin-right: 15px;
  margin-top: 35px;
  background-color: lightgray;
	float: right;
}

.workhead {
  background-color: lightgray;
	padding: 5px;
  text-align: center;
}


.workarea {
    background-color: lightgray;
    height: 300px;
	padding: 5px;
}

.centerhead {
    text-align: center;
}

.readingscrollregion {
    height: 415px;
	border-bottom: 1px solid;
	border-left: 1px solid;
	border-color: #dddddd;		
}

.msgscrollregion {
	height: 230px;
	border-bottom: 1px solid;
	border-left: 1px solid;
	border-color: #dddddd;	
}

.sectiontext {
	font-weight: bold;
}

.scrollbar
{
	overflow-y: scroll;
	margin-bottom: 10px;
}

#style-2::-webkit-scrollbar-track
{
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #F5F5F5;
}

#style-2::-webkit-scrollbar
{
	width: 12px;
	background-color: #F5F5F5;
}

#style-2::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
	background-color: #D62929;
}

#style-9::-webkit-scrollbar-track
{
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	background-color: #F5F5F5;
}

#style-9::-webkit-scrollbar
{
	width: 10px;
	background-color: #F5F5F5;
}

#style-9::-webkit-scrollbar-thumb
{
	background-color: #F90;	
	background-image: -webkit-linear-gradient(90deg,
	                                          rgba(255, 255, 255, .2) 25%,
											  transparent 25%,
											  transparent 50%,
											  rgba(255, 255, 255, .2) 50%,
											  rgba(255, 255, 255, .2) 75%,
											  transparent 75%,
											  transparent)
}



.animate-enter, 
.animate-leave
{ 
    -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
    position: relative;
    display: block;
} 

.animate-enter.animate-enter-active, 
.animate-leave {
    opacity: 1;
    top: 0;
    height: 30px;
}

.animate-leave.animate-leave-active,
.animate-enter {
    opacity: 0;
    top: -50px;
    height: 0px;
}


@media (max-height: 750px  ) {

  .btn-default {
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.33;
    border-radius: 6px;  
  }

  .login-buttons {
    width: 290px;
  }

  .schedulebar-item {
    width: 65px;
    height: 75px;
    float: left;    
    margin-bottom: 15px;
    text-align: center;
  }

  .schedule-item-area {
    height: 45px;
  }

  .schedulebar-area {
    height: 75px;
  }

  .schedulebar-scroll-area {
    margin-top: 25px; 
    height: 75px;
    width: 50px;
  }

  .btn-xs {
    padding: 5px 10px;
  }

  .panel-heading {
    padding: 20px 15px;
  }

  .schedulebar-item-text {
    font-size: 18px;
    margin-top: 5px;
  }  

}


@media (max-width: 995px  ) {
  .examday-map-area {
    height: 300px;
  }

  .btn-default {
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.33;
    border-radius: 6px;  
  }

  .login-buttons {
    width: 290px;
  }

  .schedulebar-item {
    #border-right: 1pt solid;
    width: 65px;
    height: 75px;
    float: left;    
    margin-bottom: 15px;
    text-align: center;
  }

  .schedulebar-area {
    height: 75px;
  }

  .schedule-item-area {
    height: 45px;
  }

  .schedulebar-scroll-area {
    margin-top: 25px; 
    height: 75px;
    width: 50px;
  }

  .btn-xs {
    padding: 5px 10px;
  }

  .panel-heading {
    padding: 20px 15px;
  }

  .schedulebar-item-text {
    font-size: 18px;
    margin-top: 5px;
  }

  .readingscrollregion {
    height: inherit;
    border-bottom: 0px solid;
    border-left: 0px solid;
    border-color: #ffffff;    
  }

  .scrollbar {
    overflow-y: inherit;
    margin-bottom: 10px;
  }

}

}

